[gd_scene load_steps=4 format=3 uid="uid://luocgnwuc524"]

[ext_resource type="Theme" uid="uid://fa2uag8fv3w1" path="res://assets/main_theme.tres" id="1_8uc0k"]
[ext_resource type="Script" path="res://src/missions.gd" id="1_mitac"]
[ext_resource type="PackedScene" uid="uid://bri3qsfonbejf" path="res://src/morph_button.tscn" id="1_oksqg"]

[node name="MissionsMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8uc0k")
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_mitac")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 1144.0
offset_bottom = 640.0

[node name="VBoxContainer0" type="VBoxContainer" parent="HBoxContainer"]
offset_right = 128.0
offset_bottom = 632.0
theme_override_constants/separation = 20
alignment = 1

[node name="MissionButton0" parent="HBoxContainer/VBoxContainer0" instance=ExtResource("1_oksqg")]
offset_top = 286.0
offset_right = 128.0
offset_bottom = 286.0
text = "MISSION 0"
start_with_focus = true

[node name="MissionButton1" parent="HBoxContainer/VBoxContainer0" instance=ExtResource("1_oksqg")]
offset_top = 306.0
offset_right = 128.0
offset_bottom = 306.0
text = "MISSION 1"
start_with_focus = false

[node name="MissionButton2" parent="HBoxContainer/VBoxContainer0" instance=ExtResource("1_oksqg")]
offset_top = 326.0
offset_right = 128.0
offset_bottom = 326.0
text = "MISSION 2"
start_with_focus = false

[node name="MissionButton3" parent="HBoxContainer/VBoxContainer0" instance=ExtResource("1_oksqg")]
offset_top = 346.0
offset_right = 128.0
offset_bottom = 346.0
text = "MISSION 3"
start_with_focus = false

[node name="VBoxContainer1" type="VBoxContainer" parent="HBoxContainer"]
offset_left = 132.0
offset_right = 1136.0
offset_bottom = 632.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer1"]
offset_right = 1004.0
offset_bottom = 632.0
size_flags_vertical = 3
alignment = 1

[node name="Label0" type="Label" parent="HBoxContainer/VBoxContainer1/HBoxContainer"]
visible = false
offset_right = 128.0
offset_bottom = 19.0
theme_override_font_sizes/font_size = 16
text = "MISSION TRAINING"

[node name="Label1" type="Label" parent="HBoxContainer/VBoxContainer1/HBoxContainer"]
visible = false
theme_override_font_sizes/font_size = 16

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer1/HBoxContainer"]
visible = false
theme_override_font_sizes/font_size = 16

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer1/HBoxContainer"]
visible = false
theme_override_font_sizes/font_size = 16

[connection signal="button_down" from="HBoxContainer/VBoxContainer0/MissionButton0" to="." method="_on_mission_button_0_button_down"]
[connection signal="on_focus" from="HBoxContainer/VBoxContainer0/MissionButton0" to="." method="_on_mission_button_0_on_focus"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer0/MissionButton1" to="." method="_on_mission_button_1_button_down"]
[connection signal="on_focus" from="HBoxContainer/VBoxContainer0/MissionButton1" to="." method="_on_mission_button_1_on_focus"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer0/MissionButton2" to="." method="_on_mission_button_2_button_down"]
[connection signal="on_focus" from="HBoxContainer/VBoxContainer0/MissionButton2" to="." method="_on_mission_button_2_on_focus"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer0/MissionButton3" to="." method="_on_mission_button_3_button_down"]
[connection signal="on_focus" from="HBoxContainer/VBoxContainer0/MissionButton3" to="." method="_on_mission_button_3_on_focus"]
